# neighbourhood_run

./: .gitignore  README.md  analyze_coverage.py  app.py  check_boundary_islands.py  check_files.py  check_flags.py  check_islands.py  check_islands_v2.py  check_islands_v3.py  check_roads.py  check_service_roads.py  clean_all_data.py  clear_exclusions.py  debug_boundary_check.py  debug_clip.py  debug_excluded_area.py  debug_gaps.py  debug_missing_roads.py  debug_overrides.py  debug_ringvej.py  debug_route6.py  debug_route6_edges.py  debug_rule4.py  debug_silkeborgvej.py  debug_sophus.py  debug_specific.py  debug_unreachable.py  extract_garmin.py  find_gap.py  fix_duplicates.py  generate_routes.py  inspect_garmin_export.py  parse_tracks.py  pyproject.toml  rebuild_all.py  run_full_pipeline.py  secrets.yaml  sync_garmin.py  sync_strava.py
data/debug/: dissolved_boundary_debug.gpkg
data/manual/: config.yaml  exclusions.gpkg  segment_overrides.json
data/processed/: home_location.gpkg
data/processed/network/: runnable_network.gpkg
data/raw/boundaries/: postcode_boundary.gpkg
src/neighbourhood_run/: boundary.py  config.py  coverage.py  exclusions.py  garmin_sync.py  gpx_export.py  network.py  reviews.py  routing.py  strava_sync.py  tracks.py  web.py
static/css/: app.css
static/js/: actions.js  exclusions.js  flagged_review.js  map_init.js  network_layers.js  route_chooser.js  route_review.js  route_selection.js  ui_helpers.js  view_modes.js
templates/: map_view.html
